Change in index.html GUEST to AWAY ln 17

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="counter" id="guest-count">0</div>
                 <div class="buttons">
                     <button class="increment-btn" onclick="incrementGuestBy1()" id="guest+1">+1</button>
