change scr to ./script.js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             </div>
         </div>
         <button class="new-game-btn" id="new-game" onclick="newGame()">NEW GAME</button>
-        <script src="index.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
